<resources>
    <string name="app_name">Química Digital</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="pesquisa">Pesquisa</string>
    <string name="pesquisavisu">Pesquisa Visual</string>
    <string name="ajuda">Ajuda</string>
    <string name="informativo">Informações</string>
    <string name="Math">Funções Matemáticas</string>
    <string name="physics">Funções de Física</string>
    <string name="quimica_organica">Química Orgânica</string>
    <string name="update_message">Notas versão 2.0.1:</string>
    <string name="versão">Versão 2.0.1</string>

    <string name="credito_quimica_organica"><![CDATA[
    <a href="https://www.flaticon.com/free-icons/search" title="search icons">Ícone Lupa de Pesquisa: Search icons created by Freepik - Flaticon</a>
    <br>
    <br>
    <a href="https://www.flaticon.com/free-icons/magnifying-glass" title="magnifying glass icons">Ícone Lupa da pesquisa Visual: Magnifying glass icons created by Freepik - Flaticon</a>
    <br>
    <br>
    <a href="https://www.flaticon.com/free-icons/question" title="question icons">Ícone de Ajuda: Question icons created by Freepik - Flaticon</a>
    <br>
    <br>
    <a href="https://www.flaticon.com/free-icons/information" title="information icons">Ícone de Informação: Information icons created by Freepik - Flaticon</a>
    <br>
    <br>
    <a href="https://www.flaticon.com/free-icons/function" title="function icons">Ícone de Função Matemática: Function icons created by Vitaly Gorbachev - Flaticon</a>
    <br>
    <br>
    <a href="https://www.flaticon.com/free-icons/chemistry" title="chemistry icons">Ícone de Química Orgânica: Chemistry icons created by Freepik - Flaticon</a>
]]></string>



    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>